--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -15,7 +15,7 @@
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p><a class="mw-selflink selflink">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python</a> &#1077; &#1087;&#1072;&#1085;&#1077;&#1083; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; <a href="../bg/Interface.html" title="Interface/bg">&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080;&#1103; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a> &#1085;&#1072;  FreeCAD. &#1058;&#1086;&#1081; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1087;&#1088;&#1077;&#1090;&#1072;&#1090;&#1086;&#1088; &#1085;&#1072; <a href="../Python.html" title="Python">Python</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1080; &#1074;&#1098;&#1074; FreeCAD &#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;, &#1080; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1090;&#1077;&#1093;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. 
 </p><p>&#1058;&#1103; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085;&#1072; &#1074;&#1080;&#1076;&#1080;&#1084;&#1072;/&#1089;&#1082;&#1088;&#1080;&#1090;&#1072; &#1095;&#1088;&#1077;&#1079; &#1087;&#1072;&#1076;&#1072;&#1097;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; <b>View &rarr; Panels &rarr; Python Console</b>.
-</p><p>The Python Console in FreeCAD has basic syntax highlighting, to differentiate, with various styles and colors, comments, strings, numeric values, built in functions, printed text output, and delimiters like parentheses and commas. These properties of the console can be configured in the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
+</p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1074;&#1098;&#1074; FreeCAD &#1080;&#1084;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1086; &#1086;&#1094;&#1074;&#1077;&#1090;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1080;&#1085;&#1090;&#1072;&#1082;&#1089;&#1080;&#1089;&#1072;, &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1086;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;&#1090; &#1089; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1090;&#1080;&#1083;&#1086;&#1074;&#1077; &#1080; &#1094;&#1074;&#1077;&#1090;&#1086;&#1074;&#1077;, &#1082;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072;&#1088;&#1080;, &#1085;&#1080;&#1079;&#1086;&#1074;&#1077;, &#1094;&#1080;&#1092;&#1088;&#1086;&#1074;&#1080; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;, &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1080; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;, &#1087;&#1077;&#1095;&#1072;&#1090;&#1077;&#1085; &#1090;&#1077;&#1082;&#1089;&#1090;&#1086;&#1074; &#1080;&#1079;&#1093;&#1086;&#1076; &#1080; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1080;&#1090;&#1077;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1082;&#1086;&#1073;&#1080; &#1080; &#1079;&#1072;&#1087;&#1077;&#1090;&#1072;&#1080;. &#1058;&#1077;&#1079;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1085;&#1080; &#1074; <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console.png&amp;filetimestamp=20190921064541&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console.png" decoding="async" width="600" height="277" class="mw-file-element" data-file-width="779" data-file-height="359"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Python Console showing messages when FreeCAD has just started.</p>
@@ -121,12 +121,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124060438
+Cached time: 20260124060647
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.103 seconds
-Real time usage: 0.225 seconds
+CPU time usage: 0.100 seconds
+Real time usage: 0.141 seconds
 Preprocessor visited node count: 529/1000000
 Post&#8208;expand include size: 31797/2097152 bytes
 Template argument size: 12003/2097152 bytes
@@ -137,19 +137,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   90.149      1 -total
- 40.73%   36.718      1 Template:Interface_navi/bg
- 22.09%   19.911      1 Template:Std_Base_navi/bg
- 18.85%   16.993      3 Template:Navigation_menu_2
-  7.29%    6.568      1 Template:Userdocnavi/bg
-  5.24%    4.721      2 Template:Code
-  4.83%    4.356      3 Template:Emphasis
-  3.93%    3.541      2 Template:KEY
-  3.63%    3.270      1 Template:TOCright
-  3.39%    3.055      6 Template:Incode
+100.00%   41.602      1 -total
+ 26.44%   11.000      1 Template:Std_Base_navi/bg
+ 21.87%    9.100      3 Template:Navigation_menu_2
+ 16.87%    7.018      1 Template:Interface_navi/bg
+ 11.93%    4.963      1 Template:Userdocnavi/bg
+  7.73%    3.218     11 Template:MenuCommand
+  7.20%    2.997      2 Template:Caption
+  6.05%    2.518      1 Template:TOCright
+  5.97%    2.485      6 Template:Incode
+  5.33%    2.219      2 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060437 and revision id 1743181. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060647 and revision id 1743183. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
