--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -18,7 +18,7 @@
 </p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1074;&#1098;&#1074; FreeCAD &#1080;&#1084;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1086; &#1086;&#1094;&#1074;&#1077;&#1090;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1089;&#1080;&#1085;&#1090;&#1072;&#1082;&#1089;&#1080;&#1089;&#1072;, &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1086;&#1073;&#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;&#1090; &#1089; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1090;&#1080;&#1083;&#1086;&#1074;&#1077; &#1080; &#1094;&#1074;&#1077;&#1090;&#1086;&#1074;&#1077;, &#1082;&#1086;&#1084;&#1077;&#1085;&#1090;&#1072;&#1088;&#1080;, &#1085;&#1080;&#1079;&#1086;&#1074;&#1077;, &#1094;&#1080;&#1092;&#1088;&#1086;&#1074;&#1080; &#1089;&#1090;&#1086;&#1081;&#1085;&#1086;&#1089;&#1090;&#1080;, &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1080; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1080;, &#1087;&#1077;&#1095;&#1072;&#1090;&#1077;&#1085; &#1090;&#1077;&#1082;&#1089;&#1090;&#1086;&#1074; &#1080;&#1079;&#1093;&#1086;&#1076; &#1080; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1080;&#1090;&#1077;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1089;&#1082;&#1086;&#1073;&#1080; &#1080; &#1079;&#1072;&#1087;&#1077;&#1090;&#1072;&#1080;. &#1058;&#1077;&#1079;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1082;&#1086;&#1085;&#1092;&#1080;&#1075;&#1091;&#1088;&#1080;&#1088;&#1072;&#1085;&#1080; &#1074; <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console.png&amp;filetimestamp=20190921064541&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console.png" decoding="async" width="600" height="277" class="mw-file-element" data-file-width="779" data-file-height="359"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">The Python Console showing messages when FreeCAD has just started.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python, &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;&#1097;&#1072; &#1089;&#1098;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1103;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; FreeCAD &#1090;&#1086;&#1082;&#1091; &#1097;&#1086; &#1077; &#1089;&#1090;&#1072;&#1088;&#1090;&#1080;&#1088;&#1072;&#1085;.</p>
 <h2><span class="mw-headline" id="Scripting">Scripting</span></h2>
 <p><i>For absolute beginners, see:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, and <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
 </p><p><i>See also:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, and <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
@@ -121,15 +121,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124060647
+Cached time: 20260124060802
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.100 seconds
-Real time usage: 0.141 seconds
+Real time usage: 0.148 seconds
 Preprocessor visited node count: 529/1000000
-Post&#8208;expand include size: 31797/2097152 bytes
-Template argument size: 12003/2097152 bytes
+Post&#8208;expand include size: 31921/2097152 bytes
+Template argument size: 12065/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -137,19 +137,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   41.602      1 -total
- 26.44%   11.000      1 Template:Std_Base_navi/bg
- 21.87%    9.100      3 Template:Navigation_menu_2
- 16.87%    7.018      1 Template:Interface_navi/bg
- 11.93%    4.963      1 Template:Userdocnavi/bg
-  7.73%    3.218     11 Template:MenuCommand
-  7.20%    2.997      2 Template:Caption
-  6.05%    2.518      1 Template:TOCright
-  5.97%    2.485      6 Template:Incode
-  5.33%    2.219      2 Template:Code
+100.00%   42.481      1 -total
+ 33.79%   14.353      1 Template:Std_Base_navi/bg
+ 23.25%    9.876      3 Template:Navigation_menu_2
+ 16.12%    6.846      1 Template:Interface_navi/bg
+ 13.36%    5.677      1 Template:Userdocnavi/bg
+  5.98%    2.542      2 Template:Code
+  5.84%    2.482     11 Template:MenuCommand
+  5.22%    2.216      1 Template:TOCright
+  4.53%    1.926      6 Template:Incode
+  4.01%    1.702      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060647 and revision id 1743183. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060801 and revision id 1743185. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
