--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -22,7 +22,7 @@
 <p><span id="Scripting"></span>
 </p>
 <h2><span id=".D0.A1.D0.BA.D1.80.D0.B8.D0.BF.D1.82.D0.BE.D0.B2.D0.B5"></span><span class="mw-headline" id="&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;">&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;</span></h2>
-<p><i>For absolute beginners, see:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, and <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
+<p><i>For absolute beginners, see:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, &#1080; <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
 </p><p><i>See also:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, and <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
 </p><p>The Python Console can perform basic code completion when a dot is written after an object; it will show public methods and attributes (variables) of the current object (class), for example, <code>obj.</code>
 </p><p>The console is also able to show the documentation string of a particular function when the opening parenthesis is written, for example, <code>function(</code>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124060831
+Cached time: 20260124060852
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.097 seconds
-Real time usage: 0.148 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.125 seconds
 Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 31921/2097152 bytes
 Template argument size: 12065/2097152 bytes
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.470      1 -total
- 21.30%    9.472      1 Template:Std_Base_navi/bg
- 18.79%    8.358      1 Template:Interface_navi/bg
- 18.02%    8.014      3 Template:Navigation_menu_2
- 13.78%    6.129      1 Template:Userdocnavi/bg
-  7.99%    3.551      2 Template:Code
-  6.35%    2.825      2 Template:Caption
-  6.12%    2.723      3 Template:Emphasis
-  5.53%    2.458      2 Template:KEY
-  5.14%    2.287      6 Template:Incode
+100.00%   35.036      1 -total
+ 27.91%    9.778      1 Template:Std_Base_navi/bg
+ 21.03%    7.367      3 Template:Navigation_menu_2
+ 17.26%    6.047      1 Template:Userdocnavi/bg
+ 16.36%    5.731      1 Template:Interface_navi/bg
+  6.07%    2.126      2 Template:Code
+  5.15%    1.805     11 Template:MenuCommand
+  4.94%    1.732      2 Template:Caption
+  4.71%    1.651      6 Template:Incode
+  4.43%    1.552      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060831 and revision id 1743187. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060852 and revision id 1743189. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
