--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -29,7 +29,7 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console_example.png&amp;filetimestamp=20190921072538&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console_example.png" decoding="async" width="600" height="273" class="mw-file-element" data-file-width="779" data-file-height="354"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1055;&#1088;&#1080;&#1084;&#1077;&#1088;: &#1050;&#1086;&#1076; &#1085;&#1072; Python, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; 3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;.</p>
-<p>The FreeCAD initialization scripts automatically load some modules, and define some aliases. Therefore, in the Python Console these are available:
+<p>&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;&#1090;&#1077; &#1079;&#1072; &#1080;&#1085;&#1080;&#1094;&#1080;&#1072;&#1083;&#1080;&#1079;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; FreeCAD &#1072;&#1074;&#1090;&#1086;&#1084;&#1072;&#1090;&#1080;&#1095;&#1085;&#1086; &#1079;&#1072;&#1088;&#1077;&#1078;&#1076;&#1072;&#1090; &#1085;&#1103;&#1082;&#1086;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080; &#1080; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1103;&#1090; &#1085;&#1103;&#1082;&#1086;&#1080; &#1087;&#1089;&#1077;&#1074;&#1076;&#1086;&#1085;&#1080;&#1084;&#1080;. &#1045;&#1090;&#1086; &#1079;&#1072;&#1097;&#1086;, &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1090;&#1077; &#1089;&#1072; &#1085;&#1072;&#1083;&#1080;&#1095;&#1085;&#1080;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span> <span class="o">=</span> <span class="n">FreeCAD</span>
 <span class="n">Gui</span> <span class="o">=</span> <span class="n">FreeCADGui</span>
@@ -123,12 +123,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061334
+Cached time: 20260124061501
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.087 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.099 seconds
+Real time usage: 0.133 seconds
 Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 31995/2097152 bytes
 Template argument size: 12102/2097152 bytes
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.634      1 -total
- 22.96%    8.640      1 Template:Std_Base_navi/bg
- 18.54%    6.976      3 Template:Navigation_menu_2
- 15.23%    5.732      1 Template:Userdocnavi/bg
- 13.53%    5.093      1 Template:Interface_navi/bg
-  9.81%    3.692     11 Template:MenuCommand
-  6.55%    2.466      6 Template:Incode
-  6.54%    2.463      3 Template:Emphasis
-  5.99%    2.255      2 Template:Code
-  5.67%    2.133      1 Template:TOCright
+100.00%   28.018      1 -total
+ 28.62%    8.020      1 Template:Std_Base_navi/bg
+ 25.10%    7.032      3 Template:Navigation_menu_2
+ 15.43%    4.323      1 Template:Userdocnavi/bg
+ 14.90%    4.174      1 Template:Interface_navi/bg
+  6.48%    1.816      2 Template:Caption
+  6.16%    1.726      2 Template:Code
+  4.88%    1.366     11 Template:MenuCommand
+  4.79%    1.342      6 Template:Incode
+  4.79%    1.341      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061334 and revision id 1743198. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061500 and revision id 1743200. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
