--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -6,7 +6,7 @@
 <li><a href="../it/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Console Python (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Konsola Pythona (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="Console Python (11% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1086;&#1085;&#1089;&#1086;&#1083;&#1100; Python (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#54028;&#51060;&#50028; &#53080;&#49556;(Python console) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -34,7 +34,7 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span> <span class="o">=</span> <span class="n">FreeCAD</span>
 <span class="n">Gui</span> <span class="o">=</span> <span class="n">FreeCADGui</span>
 </pre></div>
-<p>Therefore these are equal:
+<p>&#1057;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086; &#1090;&#1077; &#1089;&#1072; &#1088;&#1072;&#1074;&#1085;&#1080;:
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
 <span class="n">FreeCAD</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
@@ -123,35 +123,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061501
+Cached time: 20260124061536
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.099 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.115 seconds
+Real time usage: 0.172 seconds
 Preprocessor visited node count: 530/1000000
 Post&#8208;expand include size: 31995/2097152 bytes
 Template argument size: 12102/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2687/5000000 bytes
+Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.018      1 -total
- 28.62%    8.020      1 Template:Std_Base_navi/bg
- 25.10%    7.032      3 Template:Navigation_menu_2
- 15.43%    4.323      1 Template:Userdocnavi/bg
- 14.90%    4.174      1 Template:Interface_navi/bg
-  6.48%    1.816      2 Template:Caption
-  6.16%    1.726      2 Template:Code
-  4.88%    1.366     11 Template:MenuCommand
-  4.79%    1.342      6 Template:Incode
-  4.79%    1.341      1 Template:TOCright
+100.00%   43.897      1 -total
+ 35.62%   15.634      1 Template:Std_Base_navi/bg
+ 24.54%   10.771      3 Template:Navigation_menu_2
+ 19.41%    8.519      1 Template:Interface_navi/bg
+ 13.45%    5.902      1 Template:Userdocnavi/bg
+  5.03%    2.210      2 Template:KEY
+  4.61%    2.024      2 Template:Code
+  4.15%    1.824     11 Template:MenuCommand
+  3.92%    1.721      1 Template:TOCright
+  3.67%    1.609      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061500 and revision id 1743200. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061536 and revision id 1743202. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
