--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -23,7 +23,7 @@
 </p>
 <h2><span id=".D0.A1.D0.BA.D1.80.D0.B8.D0.BF.D1.82.D0.BE.D0.B2.D0.B5"></span><span class="mw-headline" id="&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;">&#1057;&#1082;&#1088;&#1080;&#1087;&#1090;&#1086;&#1074;&#1077;</span></h2>
 <p><i>&#1047;&#1072; &#1085;&#1072;&#1087;&#1098;&#1083;&#1085;&#1086; &#1085;&#1072;&#1095;&#1080;&#1085;&#1072;&#1077;&#1097;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077;:</i> <a href="../Introduction_to_Python.html" title="Introduction to Python">Introduction to Python</a>, &#1080; <a href="../Python_scripting_tutorial.html" title="Python scripting tutorial">Python scripting tutorial</a>.
-</p><p><i>See also:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, &#1080; <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
+</p><p><i>&#1042;&#1080;&#1078;&#1090;&#1077; &#1089;&#1098;&#1097;&#1086;:</i> <a href="../FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics">FreeCAD scripting basics</a>, &#1080; <a href="../Scripted_objects.html" title="Scripted objects">Scripted objects</a>.
 </p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1080;&#1079;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1086; &#1079;&#1072;&#1074;&#1098;&#1088;&#1096;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1086;&#1076;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1090;&#1086;&#1095;&#1082;&#1072; &#1077; &#1085;&#1072;&#1087;&#1080;&#1089;&#1072;&#1085;&#1072; &#1089;&#1083;&#1077;&#1076; &#1086;&#1073;&#1077;&#1082;&#1090;; &#1090;&#1103; &#1097;&#1077; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1087;&#1091;&#1073;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1080; &#1072;&#1090;&#1088;&#1080;&#1073;&#1091;&#1090;&#1080; (&#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1083;&#1080;&#1074;&#1080;) &#1085;&#1072; &#1090;&#1077;&#1082;&#1091;&#1097;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090; (&#1082;&#1083;&#1072;&#1089;), &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088;, <code>obj.</code>
 </p><p>&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1089;&#1098;&#1097;&#1086; &#1090;&#1072;&#1082;&#1072; &#1077; &#1074; &#1089;&#1098;&#1089;&#1090;&#1086;&#1103;&#1085;&#1080;&#1077; &#1076;&#1072; &#1087;&#1086;&#1082;&#1072;&#1078;&#1077; &#1085;&#1080;&#1079; - &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1077;&#1085;&#1072; &#1092;&#1091;&#1085;&#1082;&#1094;&#1080;&#1103;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1087;&#1080;&#1089;&#1072;&#1085;&#1072; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103;&#1097;&#1072; &#1089;&#1082;&#1086;&#1073;&#1072;, &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088; <code>function(</code>
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console_example.png&amp;filetimestamp=20190921072538&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console_example.png" decoding="async" width="600" height="273" class="mw-file-element" data-file-width="779" data-file-height="354"></a></span>
@@ -123,15 +123,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061649
+Cached time: 20260124061703
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.089 seconds
-Real time usage: 0.133 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 530/1000000
-Post&#8208;expand include size: 32018/2097152 bytes
-Template argument size: 12125/2097152 bytes
+Post&#8208;expand include size: 32029/2097152 bytes
+Template argument size: 12136/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.585      1 -total
- 22.09%    9.408      1 Template:Interface_navi/bg
- 20.74%    8.834      3 Template:Navigation_menu_2
- 18.31%    7.799      1 Template:Std_Base_navi/bg
- 16.32%    6.951      1 Template:Userdocnavi/bg
-  9.00%    3.832      6 Template:Incode
-  7.54%    3.211      2 Template:Code
-  5.40%    2.300      2 Template:Caption
-  5.39%    2.294      2 Template:KEY
-  5.37%    2.287      3 Template:Emphasis
+100.00%   47.759      1 -total
+ 23.73%   11.332      1 Template:Std_Base_navi/bg
+ 19.71%    9.415      1 Template:Userdocnavi/bg
+ 17.55%    8.381      1 Template:Interface_navi/bg
+ 17.37%    8.294      3 Template:Navigation_menu_2
+  6.32%    3.017      6 Template:Incode
+  6.30%    3.011      2 Template:Code
+  4.95%    2.362      1 Template:TOCright
+  4.66%    2.224      2 Template:Caption
+  4.63%    2.213     11 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061649 and revision id 1743204. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061702 and revision id 1743206. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
