--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -39,7 +39,7 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">App</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
 <span class="n">FreeCAD</span><span class="o">.</span><span class="n">newDocument</span><span class="p">()</span>
 </pre></div>
-<p><i>Note:</i> these pre-loaded modules and aliases are only available from the Python Console embedded inside the FreeCAD program. If you use FreeCAD as a library in an external program, you must remember to load the <code>FreeCAD</code> and <code>FreeCADGui</code> modules and define the necessary aliases if you wish.
+<p><i>Breote:</i> &#1090;&#1077;&#1079;&#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;&#1080; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080; &#1080; &#1087;&#1089;&#1077;&#1074;&#1076;&#1086;&#1085;&#1080;&#1084;&#1080; &#1089;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080; &#1089;&#1072;&#1084;&#1086; &#1086;&#1090; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python, &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085;&#1072; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; FreeCAD. &#1040;&#1082;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; FreeCAD &#1082;&#1072;&#1090;&#1086; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072; &#1074;&#1098;&#1074; &#1074;&#1098;&#1085;&#1096;&#1085;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;, &#1090;&#1088;&#1103;&#1073;&#1074;&#1072; &#1087;&#1086;&#1084;&#1085;&#1080;&#1090;&#1077; &#1076;&#1072; &#1079;&#1072;&#1088;&#1077;&#1076;&#1080;&#1090;&#1077; &#1084;&#1086;&#1076;&#1091;&#1083;&#1080;&#1090;&#1077; <code>FreeCAD</code> &#1080; <code>FreeCADGui</code> &#1080; &#1076;&#1072; &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1080;&#1090;&#1077; &#1085;&#1077;&#1086;&#1073;&#1093;&#1086;&#1076;&#1080;&#1084;&#1080;&#1090;&#1077; &#1087;&#1089;&#1077;&#1074;&#1076;&#1086;&#1085;&#1080;&#1084;&#1080;, &#1072;&#1082;&#1086; &#1078;&#1077;&#1083;&#1072;&#1077;&#1090;&#1077;.
 </p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
 <p>Right-clicking the Python Console opens a context menu with the following commands: 
@@ -123,15 +123,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124061851
+Cached time: 20260124062006
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.094 seconds
-Real time usage: 0.130 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.116 seconds
 Preprocessor visited node count: 530/1000000
-Post&#8208;expand include size: 32029/2097152 bytes
-Template argument size: 12136/2097152 bytes
+Post&#8208;expand include size: 32031/2097152 bytes
+Template argument size: 12138/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -139,19 +139,19 @@ Unstrip post&#8208;expand size: 2688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.849      1 -total
- 25.88%    9.535      1 Template:Std_Base_navi/bg
- 22.03%    8.117      3 Template:Navigation_menu_2
- 17.77%    6.550      1 Template:Interface_navi/bg
- 13.92%    5.130      1 Template:Userdocnavi/bg
-  7.63%    2.810      2 Template:Code
-  6.02%    2.219      6 Template:Incode
-  5.61%    2.068      1 Template:TOCright
-  5.39%    1.986      2 Template:KEY
-  4.53%    1.668     11 Template:MenuCommand
+100.00%   28.065      1 -total
+ 29.98%    8.414      1 Template:Std_Base_navi/bg
+ 23.51%    6.598      3 Template:Navigation_menu_2
+ 19.02%    5.337      1 Template:Interface_navi/bg
+ 13.39%    3.759      1 Template:Userdocnavi/bg
+  6.37%    1.788      2 Template:Code
+  4.87%    1.368     11 Template:MenuCommand
+  4.74%    1.330      2 Template:Caption
+  4.48%    1.258      1 Template:TOCright
+  4.41%    1.237      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124061851 and revision id 1743208. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124062006 and revision id 1743210. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
